# asana-org

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: melpa-validation.yml  pypi-publish.yml
bridge/: LICENSE  README.md  pyproject.toml
bridge/src/asana_org_bridge/: __init__.py  __main__.py  ai_client.py  asana_client.py  auth.py  commands.py  config.py  db.py  logging_config.py  models.py  sync.py
bridge/tests/: conftest.py  test_ai_summary.py  test_asana_client.py  test_cache_prune.py  test_commands_io_contract.py  test_config.py  test_conflict_detection.py  test_date_normalization.py  test_detect_changes.py  test_logging_redaction.py  test_onboarding.py  test_pass_auth.py  test_policy_hooks.py  test_recovery_commands.py  test_safety_caps.py  test_schema.py  test_status_command.py  test_sync_command_execution.py  test_sync_json_validation.py  test_sync_pull_comments.py  test_sync_pull_project_filter.py
docs/: bridge.md  cli-contract.md  configuration.md  development.md  emacs.md  installation.md  melpa-submission.md  release.md  safety.md  troubleshooting.md  usage.md
elisp/: asana-org-render.el  asana-org-sync.el  asana-org-transient.el  asana-org.el
